--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jszip": "^3.10.1",
     "nuxt": "^4.1.3",
     "pinia": "^3.0.3",
+    "swiper": "^12.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vuetify": "^3.9.1"
