--- a/package.json
+++ b/package.json
@@ -15,31 +15,32 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "10.1.1",
-    "@pinia/nuxt": "0.11.2",
+    "@nuxtjs/i18n": "10.2.1",
+    "@pinia/nuxt": "0.11.3",
     "crypto-es": "^3.1.2",
     "jszip": "^3.10.1",
-    "nuxt": "^4.1.3",
-    "pinia": "^3.0.3",
+    "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
     "swiper": "^12.0.3",
-    "vue": "^3.5.22",
+    "vue": "^3.5.25",
     "vue-router": "^4.6.3",
-    "vuetify": "^3.9.1"
+    "vuetify": "^3.11.0"
   },
   "devDependencies": {
-    "@iconify/utils": "^3.0.2",
-    "@kikiutils/eslint-config": "^4.0.1",
+    "@antfu/eslint-config": "^6.2.0",
+    "@iconify/utils": "^3.1.0",
+    "@kikiutils/eslint-config": "^5.0.0",
     "@mdi/font": "^7.4.47",
-    "@nuxt/fonts": "^0.11.4",
-    "@unocss/nuxt": "^66.5.4",
-    "@unocss/transformer-directives": "^66.5.4",
-    "eslint": "^9.38.0",
+    "@nuxt/fonts": "^0.12.1",
+    "@unocss/nuxt": "^66.5.9",
+    "@unocss/transformer-directives": "^66.5.9",
+    "eslint": "^9.39.1",
     "nitro-cloudflare-dev": "^0.2.2",
     "postcss-pxtorem": "^6.1.0",
-    "sass-embedded": "^1.93.2",
-    "unocss": "^66.5.4",
-    "vuetify-nuxt-module": "^0.18.7",
-    "wrangler": "^4.45.0"
+    "sass-embedded": "^1.93.3",
+    "unocss": "^66.5.9",
+    "vuetify-nuxt-module": "^0.18.8",
+    "wrangler": "^4.51.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
