--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
     "swiper": "^12.0.3",
+    "uuid": "^13.0.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "vuetify": "^3.11.0"
@@ -32,6 +33,7 @@
     "@kikiutils/eslint-config": "^5.0.0",
     "@mdi/font": "^7.4.47",
     "@nuxt/fonts": "^0.12.1",
+    "@types/uuid": "^11.0.0",
     "@unocss/nuxt": "^66.5.9",
     "@unocss/transformer-directives": "^66.5.9",
     "eslint": "^9.39.1",
